--- a/src/components/molecules/Header/index.scss
+++ b/src/components/molecules/Header/index.scss
@@ -12,12 +12,12 @@
 .course-text{
     padding: 84px;
 }
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > button {
     color: #717f86;
     font-size: 14px;
     font-weight: 500;
 }
-.navbar-nav > li > a{
+.navbar-nav > li > a, .navbar-nav > li > button{
 	padding: 0px;
 	margin: 10px 5px;
 	padding: 10px 15px;
@@ -27,18 +27,18 @@
 	color: #2F746F;
 }
 
-.navbar-nav .active a{
+.navbar-nav .active a, .navbar-nav .active button{
     background: none !important;
     color: #2F746F !important;
     outline: none;
 }
 
-.sign-up-btn a{
+.sign-up-btn button{
 	background-color: #2F746F;
 	color: #ffffff !important;
 	border: 1px solid #2F746F;
 }
-.sign-up-btn a:hover, .sign-up-btn a:focus{
+.sign-up-btn button:hover{
 	border: 1px solid #2F746F;
 	background-color: #fff;
 	color: #2F746F !important;
