--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
+@import url('./assets/css/font-awesome.min.css');
+@import url('./assets/css/bootstrap.min.css');
+@import url('./assets/fonts/fonts.css');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-size: 15px;
+    line-height: 1.52;
+    color: #717f86;
+    font-size: 16px;
+	font-family: AvenirNext ,'Open Sans';
+    font-weight: 400;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+.section-padding{
+	padding: 60px 0px;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: LemonMilk;
+    color: #003F5A;
+}
+a{
+    color: #2F746F;
+}
+a:hover, a:focus{
+    color: #2F746F;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.header-section{
+    margin: auto 15px;
+}
+
+.header-section >h2::after{
+
+    content: "";
+    display: block;
+    margin-top: 5px;
+    position: absolute;
+    height: 2px;
+    width: 80px;
+    background: #2F746F;
 }
