--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @import url('./assets/css/bootstrap.min.css');
 @import url('./assets/fonts/fonts.css');
 
+html, body, #root{
+    width: 100%;
+    height: 100%;
+}
 body {
 	font-size: 15px;
     line-height: 1.52;
