--- a/src/components/molecules/ModalHeader/index.scss
+++ b/src/components/molecules/ModalHeader/index.scss
@@ -1,8 +1,14 @@
 .modal-header{
+  width: 100%;
+  height: 63px;
+  >*{
+    display: inline-block;
+    vertical-align: top
+  }
+  &__tab-bar{
     display: block;
     width: 100%;
     padding: 20px;
-
 
     &__tab-item{
         position: relative;
@@ -48,4 +54,8 @@
           background: #2F746F;
         }
       }
+  }
+  i{
+    margin-right: 15px;
+  }
 }
