--- a/src/components/molecules/SignUpModal/index.scss
+++ b/src/components/molecules/SignUpModal/index.scss
@@ -14,7 +14,7 @@
         width: 100%;
         max-width: 768px;
         height: 640px;
-        background: #fff;
+        background: #f9f7f6;
         overflow: scroll;
     }
 }
