--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -45,3 +45,14 @@
     src: url('./LemonMilk.otf') format('opentype');
     font-style: normal;
 }
+
+@font-face {
+	font-family: 'icomoon';
+	src:url('./icomoon.eot');
+	src:url('./icomoon.eot') format('embedded-opentype'),
+		url('./icomoon.woff') format('woff'),
+		url('./icomoon.ttf') format('truetype'),
+		url('./icomoon.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
