--- a/src/components/atoms/TextInput/index.scss
+++ b/src/components/atoms/TextInput/index.scss
@@ -1,130 +1,16 @@
 .text-input{
-	position: relative;
-	z-index: 1;
 	display: inline-block;
-	margin: auto 0;
-	margin-top: 30px;
-	margin-bottom: 10px; 
-	max-width: 350px;
-	width: calc(100%);
-	vertical-align: top;
-	
-	&__field{
-		position: relative;
-		display: block;
-		float: right;
-		padding: 0.8em;
-		width: 60%;
-		border: none;
-		border-radius: 0;
-		background: #f0f0f0;
-		color: #aaa;
-		font-weight: 500;
-		-webkit-appearance: none; /* for box shadows to show on iOS */
-
-
-		position: absolute;
-		top: 4px;
-		left: 4px;
-		z-index: 100;
-		display: block;
-		padding: 0 0.55em;
-		width: calc(100% - 8px);
-		height: calc(100% - 8px);
-		background: #f0f0f0;
-		color: #7F8994;
-		opacity: 0;
-		-webkit-transform: scale3d(1, 0, 1);
-		transform: scale3d(1, 0, 1);
-		-webkit-transform-origin: 50% 100%;
-		transform-origin: 50% 100%;
-		-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-		transition: opacity 0.3s, transform 0.3s;
-
-		&:focus{
-			outline: none;	
-		}
-	}
-
+	margin-right: 15px;
+	margin-bottom: 15px;
+	width: 300px;
 	&__label{
-		display: inline-block;
-		float: right;
-		padding: 0 1em;
-		width: 40%;
-		color: #6a7989;
-		font-weight: bold;
-		font-size: 70.25%;
-		-webkit-font-smoothing: antialiased;
-    	-moz-osx-font-smoothing: grayscale;
-		-webkit-touch-callout: none;
-		-webkit-user-select: none;
-		-khtml-user-select: none;
-		-moz-user-select: none;
-		-ms-user-select: none;
-		user-select: none;
-
-		width: 100%;
-		text-align: left;
-		cursor: text;
-
-		&::before{
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background: #fff;
-			-webkit-transform-origin: 50% 100%;
-			transform-origin: 50% 100%;
-			-webkit-transition: -webkit-transform 0.3s;
-			transition: transform 0.3s;
-		}
-
-		&__content{
-			position: relative;
-			display: block;
-			padding: 1.6em 0;
-			width: 100%;
-
-			-webkit-transform-origin: 0% 50%;
-			transform-origin: 0% 50%;
-			-webkit-transition: -webkit-transform 0.3s;
-			transition: transform 0.3s;
-		}
-	}
-
-	&__field:focus,&--filled &__field{
-		opacity: 1;
-		-webkit-transform: scale3d(1, 1, 1);
-		transform: scale3d(1, 1, 1);
-	}
-
-	&__field:focus + &__label,
-	&--filled &__label{
-		cursor: default;
-		pointer-events: none;
-	}
-
-	&__field:focus + &__label::before,
-	&--filled &__label::before{
-		-webkit-transform: scale3d(1, 1.5, 1);
-		transform: scale3d(1, 1.5, 1);
-	}
-
-	&__field:focus + &__label &__label__content,
-	&--filled  &__label__content{
-		-webkit-transform: translate3d(0, -3.15em, 0) scale3d(0.8, 0.8, 1);
-		transform: translate3d(0, -3.15em, 0) scale3d(0.8, 0.8, 1) translateZ(1px);
+		font-weight: 400;
 	}
 }
 
 
 @media (min-width: 1024px) {
 	.text-input{
-		&:first-child{
-			margin-right: 15px;
-		}
 		
 	}
 }
