--- a/src/components/molecules/ChoosePlanFormPage/index.scss
+++ b/src/components/molecules/ChoosePlanFormPage/index.scss
@@ -12,4 +12,17 @@
         width: 80px;
         background: #2F746F;
     }
+    &__container{
+        height: calc(100vh - 214px);
+        overflow: scroll;
+    }
+}
+
+
+@media (min-height: 641px) {
+    .choose-plan-form-page{
+        &__container{
+            height: 426px
+        }
+    }
 }
