--- a/src/components/molecules/FormSection/index.scss
+++ b/src/components/molecules/FormSection/index.scss
@@ -39,4 +39,20 @@
             margin-right: 15px;
         }
     }
+
+    &__button-group{
+        width: 100%;
+        height: 50px;
+        margin-bottom: 10px;
+        padding: 0 15px 10px 15px;
+       
+        button{
+            float: right;
+            padding: 10px 15px;
+            margin-left: 10px;
+            background-color: #2F746F;
+	        color: #ffffff !important;
+	        border: 1px solid #2F746F;
+        }
+    }
 }
