--- a/src/components/molecules/ModalHeader/index.scss
+++ b/src/components/molecules/ModalHeader/index.scss
@@ -6,8 +6,7 @@
     vertical-align: top
   }
   &__tab-bar{
-    display: block;
-    width: 100%;
+    display: inline-block;
     padding: 20px;
 
     &__tab-item{
@@ -56,6 +55,8 @@
       }
   }
   i{
-    margin-right: 15px;
+    float: right;
+    margin: 20px;
+    font-size: 24px;
   }
 }
