--- a/src/components/molecules/PersonalDetailsFormPage/index.scss
+++ b/src/components/molecules/PersonalDetailsFormPage/index.scss
@@ -2,6 +2,8 @@
     display: block;
     width: 100%;
     padding: 20px;
+    
+    
 
     h2::after{
         content: "";
@@ -12,4 +14,19 @@
         width: 80px;
         background: #2F746F;
     }
+
+    &__container{
+        height: calc(100vh - 214px);
+        overflow: scroll;
+    }
 }
+
+@media (min-height: 641px) {
+    .personal-details-form-page{
+        &__container{
+            height: 426px
+        }
+    }
+}
+
+
